k8s/06-backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: movie-backend
  namespace: movie-watchlist
spec:
  replicas: 1
  selector:
    matchLabels:
      app: movie-backend
  template:
    metadata:
      labels:
        app: movie-backend
    spec:
      containers:
        - name: movie-backend
          image: stefanishan33/movie-watchlist-backend:latest
          ports:
            - containerPort: 5001
