k8s/08-frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: movie-frontend
  namespace: movie-watchlist
spec:
  replicas: 1
  selector:
    matchLabels:
      app: movie-frontend
  template:
    metadata:
      labels:
        app: movie-frontend
    spec:
      containers:
        - name: movie-frontend
          image: stefanishan33/movie-watchlist-frontend:v2
          ports:
            - containerPort: 80
