k8s/04-postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: movie-db
  namespace: movie-watchlist
spec:
  clusterIP: None
  selector:
    app: movie-db
  ports:
    - port: 5432
      targetPort: 5432
