k8s/07-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: movie-backend
  namespace: movie-watchlist
spec:
  selector:
    app: movie-backend
  ports:
    - port: 5001
      targetPort: 5001
  type: ClusterIP
