k8s/10-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: movie-watchlist-ingress
  namespace: movie-watchlist
spec:
  ingressClassName: traefik
  rules:
    - host: movie.local
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: movie-backend
                port:
                  number: 5001
          - path: /
            pathType: Prefix
            backend:
              service:
                name: movie-frontend
                port:
                  number: 80
